# telepathy-account-widgets

./: .gitignore  MAINTAINERS  Makefile.am  autogen.sh  configure.ac  meson.build  meson_options.txt  meson_post_install.py  telepathy-account-widgets-uninstalled.pc.in  telepathy-account-widgets.doap
data/: .gitignore  Makefile.am  meson.build  org.gnome.telepathy-account-widgets.gschema.xml
data/icons/: Makefile.am  meson.build
po/: .gitignore  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  (+50 more)
tools/: Makefile.am  meson.build
tp-account-widgets/: Makefile.am  irc-networks.xml  meson.build  tpaw-account-settings.c  tpaw-account-widget-aim.ui  tpaw-account-widget-groupwise.ui  tpaw-account-widget-icq.ui  tpaw-account-widget-jabber.ui  tpaw-account-widget-msn.ui  tpaw-account-widget-sip.ui  tpaw-account-widget-yahoo.ui  tpaw-account-widget.c  tpaw-avatar-chooser.c  tpaw-connection-managers.c  tpaw-contactinfo-utils.c  tpaw-keyring.c  tpaw-pixbuf-utils.c  tpaw-pixbuf-utils.h  tpaw-protocol.c  tpaw-string-parser.c  tpaw-user-info.c  tpaw-utils.c
