option('enable-settings', type: 'boolean', value: true, description: 'compile without installing GSettings schema')
option('enable-unreleased-checks', type: 'boolean', value: false, description: 'enable extra checks for unreleased versions')
option('enable-gudev', type: 'combo', choices: ['yes', 'no', 'auto'], value: 'auto', description: 'build with gudev support')
option('with-cheese', type: 'combo', choices: ['yes', 'no', 'auto'], value: 'auto', description: 'enable cheese webcam support')
option('enable-ubuntu-online-accounts', type: 'combo', choices: ['yes', 'no', 'auto'], value: 'auto', description: 'build Ubuntu Online Accounts plugins')
option('enable-coding-style-checks', type: 'boolean', value: true, description: 'do not check coding style using grep')
option('with-pkgdatadir', type: 'string', value: '', description: 'set a different directory where to install data files')
option('with-icondir', type: 'string', value: '', description: 'set a different directory where to install icons')
option('with-gettext-package', type: 'string', value: '', description: 'set a different GETTEXT_PACKAGE to avoid conflicts')
